// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`groupBy 2 fields 1`] = `
[
  {
    email: bob+0@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+1@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+2@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+3@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+4@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+5@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+6@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+7@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+8@hey.com,
    name: Bobby Brown,
  },
  {
    email: bob+9@hey.com,
    name: Bobby Brown,
  },
]
`;

exports[`groupBy by  [name, count, min, sum, max, avg] with aggregations 1`] = `
[
  {
    _count: 10,
    _min: {
      min: 0,
    },
    avg: 0,
    count: 0,
    max: 0,
    min: 0,
    name: Bobby Brown,
    sum: 0,
  },
]
`;

exports[`groupBy count field and aggregations 1`] = `
[
  {
    _count: 10,
    _min: {
      min: 0,
    },
    count: 0,
  },
]
`;

exports[`groupBy email 1`] = `
[
  {
    email: bob+0@hey.com,
  },
  {
    email: bob+1@hey.com,
  },
  {
    email: bob+2@hey.com,
  },
  {
    email: bob+3@hey.com,
  },
  {
    email: bob+4@hey.com,
  },
  {
    email: bob+5@hey.com,
  },
  {
    email: bob+6@hey.com,
  },
  {
    email: bob+7@hey.com,
  },
  {
    email: bob+8@hey.com,
  },
  {
    email: bob+9@hey.com,
  },
]
`;

exports[`groupBy name 1`] = `
[
  {
    name: Bobby Brown,
  },
]
`;

exports[`groupBy name and aggregations 1`] = `
[
  {
    _avg: {
      age: 80,
    },
    _count: {
      _all: 10,
      age: 10,
    },
    _max: {
      age: 163,
    },
    _min: {
      age: 5,
    },
    _sum: {
      age: 800,
    },
    name: Bobby Brown,
  },
]
`;
